# Virelia-Prism

./: .gitignore  PRIVACY.md  README.md  SECURITY.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.main.json  vite.config.ts
src-tauri/: Cargo.toml  default_settings.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/models/: README.txt
src-tauri/src/: lib.rs  main.rs  settings.rs
src-tauri/src/commands/: app.rs  identity.rs  library.rs  metadata.rs  mod.rs  perf.rs  settings_cmds.rs  setup.rs  subtitles.rs  thumbnails.rs
src-tauri/src/models/: media_item.rs  mod.rs  scan.rs  setup.rs  subtitle.rs
src-tauri/src/services/: builtin_translation.rs  ffmpeg_util.rs  identity_cache.rs  media_file_filter.rs  metadata_cache.rs  mod.rs  process_util.rs  scanner.rs  setup_benchmark.rs  subtitle_ass_parser.rs  subtitle_ass_writer.rs  subtitle_cache.rs  subtitle_character_profile.rs  subtitle_cleanup.rs  subtitle_color_intelligence.rs  subtitle_color_readability.rs  subtitle_color_store.rs  subtitle_color_types.rs  subtitle_colors.rs  subtitle_cue.rs  subtitle_cue_quality.rs  subtitle_discovery.rs  subtitle_external_source.rs  subtitle_franchise.rs  subtitle_generation.rs  subtitle_generation_pipeline.rs  subtitle_glossary.rs  subtitle_language.rs  subtitle_match.rs  subtitle_speaker.rs  subtitle_translate.rs  subtitle_translate_existing_tests.rs  subtitle_translate_tests.rs  subtitle_translation.rs  subtitle_visual_color.rs  thumbnail_service.rs  whisper_runtime.rs
src/main/: main.ts  (+13 more)
(+499 files in other folders)
