[package]
name = "virelia-prism"
version = "0.1.0"
description = "Virelia Prism desktop media player"
authors = ["Virelia"]
edition = "2021"

[lib]
name = "virelia_prism_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
sha1 = "0.10"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde", "clock"] }
open = "5"
ureq = { version = "2", features = ["json"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
panic = "abort"
codegen-units = 16
lto = "thin"
strip = true

[profile.release-fast]
inherits = "release"
lto = false
codegen-units = 32
strip = false
